--- a/useContext-exercise/public/index.html
+++ b/useContext-exercise/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>To-do list - Lucas Manzón ReactApps</title>
+  <title>UseContext Exercise - Lucas Manzón ReactApps</title>
 </head>
 
 <body>
